--- a/src/pages/conclusiones.html
+++ b/src/pages/conclusiones.html
@@ -55,7 +55,7 @@
             <p class="text-2xl mb-2 font-bold">Referencias
             </p>
             <ul class="list-disc list-inside ml-auto font-bold text-white-gray-blue">
-                <li> Seminario Protección de Datos Personales. (s. f.). <a href="https://infocdmx.org.mx/seminariodatos2016/" target="_blank">https://infocdmx.org.mx/seminariodatos2016/</a></li>
+                <li><a href="https://www.misabogados.com.co/blog/que-es-la-legislacion-informatica" target="_blank">¿Qué es la legislación informática?</a></li>
             </ul>              
             <ul class="list-disc list-inside ml-auto font-bold text-white-gray-blue">
                 <li> Garrido, A. (2005). "Delitos informáticos en México. Reconocimiento en los ordenamientos penales de las entidades mexicanas."<a href="https://www.scielo.org.mx/scielo.php?script=sci_arttext&pid=S2007-36072023000100005" target="_blank">https://www.scielo.org.mx/scielo.php?script=sci_arttext&pid=S2007-36072023000100005</a></li>
