--- a/src/pages/legislacion.html
+++ b/src/pages/legislacion.html
@@ -44,12 +44,12 @@
                 <h1 class="text-3xl font-bold">Universidad Politecnica de Tecámac</h1>
             </div>
             <div class="nav-links hidden md:flex items-center gap-8">
-                <a class="hover:text-gray-300" href="src/pages/legislacion.html">Legislación</a>
-                <a class="hover:text-gray-300" href="src/pages/leyes.html">Leyes</a>
-                <a class="hover:text-gray-300" href="src/pages/procesos.html">Procesos</a>
-                <a class="hover:text-gray-300" href="src/pages/etica.html">Ética</a>
-                <a class="hover:text-gray-300" href="src/pages/caracteristicas.html">Características</a>
-                <a class="hover:text-gray-300" href="src/pages/conclusiones.html">Conclusiones</a>
+                <a class="hover:text-gray-300" href="./legislacion.html">Legislación</a>
+                <a class="hover:text-gray-300" href="./leyes.html">Leyes</a>
+                <a class="hover:text-gray-300" href="./procesos.html">Procesos</a>
+                <a class="hover:text-gray-300" href="./etica.html">Ética</a>
+                <a class="hover:text-gray-300" href="./caracteristicas.html">Características</a>
+                <a class="hover:text-gray-300" href="./conclusiones.html">Conclusiones</a>
             </div>
             <div class="md:hidden">
                 <ion-icon onclick="onToggleMenu(this)" name="menu" class="text-3xl cursor-pointer"></ion-icon>
@@ -59,12 +59,12 @@
 
     <div class="mobile-menu hidden bg-white shadow-md fixed inset-0 z-50 p-6 md:hidden">
         <nav class="flex flex-col items-start gap-4">
-            <a class="hover:text-purple-600" href="src/pages/legislacion.html">Legislación</a>
-            <a class="hover:text-purple-600" href="src/pages/leyes.html">Leyes</a>
-            <a class="hover:text-purple-600" href="src/pages/procesos.html">Procesos</a>
-            <a class="hover:text-purple-600" href="src/pages/etica.html">Ética</a>
-            <a class="hover:text-purple-600" href="src/pages/caracteristicas.html">Características</a>
-            <a class="hover:text-purple-600" href="src/pages/conclusiones.html">Conclusiones</a>
+            <a class="hover:text-purple-600" href="./legislacion.html">Legislación</a>
+            <a class="hover:text-purple-600" href="./leyes.html">Leyes</a>
+            <a class="hover:text-purple-600" href="./procesos.html">Procesos</a>
+            <a class="hover:text-purple-600" href="./etica.html">Ética</a>
+            <a class="hover:text-purple-600" href="./caracteristicas.html">Características</a>
+            <a class="hover:text-purple-600" href="./conclusiones.html">Conclusiones</a>
         </nav>
     </div>
 
@@ -72,43 +72,118 @@
         <article class="video-container bg-gradient-to-b from-purple-500 to-red-500 text-white p-10 rounded-xl text-center md:w-1/2 flex flex-col justify-center items-center">
             <h2 class="text-2xl font-bold mb-4">Más Información</h2>
             <div class="video-overlay">
-                <iframe src="https://www.youtube.com/embed/1LOSAXWJbdU?si=Ax2dgUWM8DR9HYds&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="w-full h-64 md:h-80 rounded-lg"></iframe>
+                <iframe src="https://www.youtube.com/embed/AYEQl6Z7CNc?si=kvxLVXS9sjN0JZOc&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="w-full h-64 md:h-80 rounded-lg"></iframe>
             </div>
         </article>
 
         <article class="p-10 space-y-6 md:w-1/2">
             <h3 class="text-3xl font-bold text-gray-800 mb-6">Legislación Informática</h3>
             <p class="text-gray-700 leading-relaxed">Este se refiere a los acuerdos y las leyes aprobadas qué regulan el uso de la información que se encuentra en la internet, dispositivos electrónicos y cualquiera de los medios digitales junto con los delitos que se cometen por el uso indebido de estos, además, observa todo lo relativo a la propiedad intelectual y derechos de autor.</p>
-            <h4 class="text-2xl font-semibold text-gray-800">Componentes Principales de la Legislación Informática:</h4>
+            <h4 class="text-2xl font-semibold text-gray-800">Conceptos basicos de la lesgilacion informatica:</h4>
             <ul class="list-disc pl-6 space-y-2 text-gray-700 leading-relaxed">
-                <li><strong>Derechos de Autor y Propiedad Intelectual:</strong> Las leyes de derechos de autor protegen las obras creadas por individuos, tales como software, bases de datos, sitios web y contenido multimedia. Estas leyes aseguran que los autores tengan control sobre cómo se utilizan y distribuyen sus obras digitales.</li>
-                <li><strong>Privacidad y Protección de Datos:</strong> Las regulaciones sobre privacidad establecen cómo se deben manejar y proteger los datos personales de los usuarios. Esto incluye la recopilación, almacenamiento y transferencia de información personal, con el objetivo de prevenir abusos y garantizar la confidencialidad.</li>
-                <li><strong>Delitos Informáticos:</strong> La legislación informática define y penaliza actos ilícitos como el acceso no autorizado a sistemas informáticos, la distribución de software malicioso, el robo de identidad y el fraude digital. Estos delitos son tratados de manera distinta a los delitos tradicionales debido a su naturaleza y al medio en el que se cometen.</li>
-                <li><strong>Contratación y Comercio Electrónico:</strong> Las leyes regulan las transacciones realizadas por medios electrónicos, incluyendo la compra y venta de bienes y servicios en línea, así como la firma y ejecución de contratos electrónicos. Estas normativas aseguran la validez legal y la seguridad de las transacciones digitales.</li>
-                <li><strong>Gobierno Electrónico:</strong> Este aspecto de la legislación se enfoca en el uso de tecnologías de la información para mejorar los servicios gubernamentales, facilitar la participación ciudadana y aumentar la transparencia administrativa.</li>
+                <li><strong>Derechos de Autor:</strong> Los derechos de autor son un conjunto de derechos exclusivos que se otorgan a los creadores de obras originales, como libros, música, arte, películas, software y otras producciones intelectuales. Estos derechos permiten a los autores controlar el uso y distribución de sus obras.</li>
+                <Strong>Principios Clave:</Strong>
+                <ol>
+                    <li>
+                        <strong>
+                            Protección Automática:
+                        </strong>
+                        La protección de los derechos de autor se otorga automáticamente en el momento en que se crea la obra y no requiere registro, aunque registrarla puede proporcionar beneficios legales adicionales.
+                    </li>
+                     <li>
+                        <strong>
+                            Duración:
+                        </strong>
+                        Los derechos de autor generalmente duran la vida del autor más un número determinado de años después de su muerte (por ejemplo, 70 años en muchos países).
+                    </li>
+                    <li>
+                        <strong>
+                            Derechos Exclusivos:
+                        </strong>
+                        El autor tiene derechos exclusivos para reproducir, distribuir, realizar públicamente, mostrar públicamente y crear obras derivadas de la obra original.
+                    </li>
+                    <li>
+                        <strong>
+                            Excepciones y Limitaciones:
+                        </strong>
+                        Existen excepciones como el "uso justo" o "fair use" que permiten el uso limitado de obras protegidas por derechos de autor sin permiso del titular, bajo ciertas condiciones.
+                    </li>
+                </ol>
+                <li><strong>Privacidad:</strong> La privacidad se refiere al derecho de las personas a controlar la recopilación, uso y divulgación de su información personal. Es un componente fundamental de los derechos humanos y está estrechamente relacionado con la protección de datos.</li>
+                <Strong>Principios Clave:</Strong>
+                <ol>
+                    <li>
+                        <strong>
+                            Consentimiento:
+                        </strong>
+                        Los individuos deben dar su consentimiento explícito para la recopilación y uso de su información personal.
+                    </li>
+                     <li>
+                        <strong>
+                            Transparencia:
+                        </strong>
+                        Las organizaciones deben ser transparentes sobre cómo recopilan, usan y comparten la información personal.
+                    </li>
+                    <li>
+                        <strong>
+                            Acceso y Control:
+                        </strong>
+                        Los individuos tienen derecho a acceder a su información personal y a corregirla si es incorrecta.
+                    </li>
+                    <li>
+                        <strong>
+                            Seguridad:
+                        </strong>
+                        La información personal debe ser protegida contra el acceso no autorizado y otras amenazas a la seguridad.
+                    </li>
+                </ol>
+                <li><strong>Protección de Datos:</strong> La protección de datos se refiere a las prácticas, políticas y leyes que garantizan la privacidad de la información personal y su tratamiento seguro y adecuado. Está diseñada para proteger los derechos de los individuos en relación con su información personal.</li>
+                    <Strong>Principios Clave:</Strong>
+                <ol>
+                    <li>
+                        <strong>
+                            Legalidad, Equidad y Transparencia:
+                        </strong>
+                        El procesamiento de datos personales debe ser legal, justo y transparente para el individuo.
+                    </li>
+                     <li>
+                        <strong>
+                            Limitación de Propósito:
+                        </strong>
+                        Los datos personales deben recopilarse para fines específicos, explícitos y legítimos y no procesarse de manera incompatible con esos fines.
+                    </li>
+                    <li>
+                        <strong>
+                            Minimización de Datos:
+                        </strong>
+                        Los datos personales deben ser adecuados, relevantes y limitados a lo necesario en relación con los fines para los que se procesan.
+                    </li>
+                    <li>
+                        <strong>
+                            Precisión:
+                        </strong>
+                        Los datos personales deben ser precisos y, cuando sea necesario, actualizados.
+                    </li>
+                    <li>
+                        <strong>
+                            Limitación del Almacenamiento:
+                        </strong>
+                        Los datos personales deben conservarse en una forma que permita la identificación de los sujetos de datos durante no más tiempo del necesario.
+                    </li>
+                    <li>
+                        <strong>
+                            Integridad y Confidencialidad:
+                        </strong>
+                        Los datos personales deben procesarse de manera que se garantice la seguridad adecuada de los datos, incluida la protección contra el procesamiento no autorizado o ilegal y contra la pérdida, destrucción o daño accidental.
+                    </li>
+                </ol>
             </ul>
-            <h4 class="text-2xl font-semibold text-gray-800">Importancia de la Legislación Informática:</h4>
-            <ul class="list-disc pl-6 space-y-2 text-gray-700 leading-relaxed">
-                <li>Proteger los derechos de autor y la propiedad intelectual en el ámbito digital.</li>
-                <li>Garantizar la privacidad y la protección de los datos personales.</li>
-                <li>Combatir los delitos informáticos y asegurar la integridad de los sistemas digitales.</li>
-                <li>Regular las transacciones electrónicas y fomentar un entorno seguro para el comercio en línea.</li>
-            </ul>
-            <div class="mt-6">
-                <a href="src/pages/legislacion.html" class="bg-purple-600 text-white py-2 px-4 rounded-lg hover:bg-purple-700">Leer más</a>
-            </div>
         </article>
     </section>
 
     <footer class="bg-gradient-to-r from-purple-500 via-pink-500 to-red-500 text-white py-6 mt-12">
         <div class="container mx-auto text-center">
             <p class="font-semibold mb-4">© 2024 Universidad Politécnica de Tecámac</p>
-            <div class="flex justify-center space-x-6">
-                <a href="#" class="hover:text-gray-300"><ion-icon name="logo-facebook" class="text-2xl"></ion-icon></a>
-                <a href="#" class="hover:text-gray-300"><ion-icon name="logo-twitter" class="text-2xl"></ion-icon></a>
-                <a href="#" class="hover:text-gray-300"><ion-icon name="logo-instagram" class="text-2xl"></ion-icon></a>
-                <a href="#" class="hover:text-gray-300"><ion-icon name="logo-linkedin" class="text-2xl"></ion-icon></a>
-            </div>
         </div>
     </footer>
 
