--- a/src/pages/procesos.html
+++ b/src/pages/procesos.html
@@ -25,22 +25,22 @@
             <div class="nav-links duration-500 md:static absolute bg-white md:min-h-fit min-h-[60vh] left-0 top-[-100%] md:w-auto  w-full flex items-center px-5">
                 <ul class="flex md:flex-row flex-col md:items-center md:gap-[4vw] gap-8">
                     <li>
-                        <a class="hover:text-gray-500" href="src/pages/legislacion.html">Legislación</a>
+                        <a class="hover:text-gray-500" href="./legislacion.html">Legislación</a>
                     </li>
                     <li>
-                        <a class="hover:text-gray-500" href="src/pages/leyes.html">Leyes</a>
+                        <a class="hover:text-gray-500" href="./leyes.html">Leyes</a>
                     </li>
                     <li>
-                        <a class="hover:text-gray-500" href="src/pages/procesos.html">Procesos</a>
+                        <a class="hover:text-gray-500" href="./procesos.html">Procesos</a>
                     </li>
                     <li>
-                        <a class="hover:text-gray-500" href="src/pages/etica.html">Ética</a>
+                        <a class="hover:text-gray-500" href="./pages/etica.html">Ética</a>
                     </li>
                     <li>
-                        <a class="hover:text-gray-500" href="src/pages/caracteristicas.html">Características</a>
+                        <a class="hover:text-gray-500" href="./caracteristicas.html">Características</a>
                     </li>
                     <li>
-                        <a class="hover:text-gray-500" href="src/pages/conclusiones.html">Conclusiones</a>
+                        <a class="hover:text-gray-500" href="./conclusiones.html">Conclusiones</a>
                     </li>
                 </ul>
             </div>
